<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.CreateAdFragment"
    android:id="@+id/container"
    tools:layout_editor_absoluteY="25dp">

    <EditText
        android:id="@+id/title_of_adv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/textview_background"
        android:hint="@string/title_hint"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="16sp"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/short_of_adv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/short_of_adv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/textview_background"
        android:hint="@string/short_description"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="16sp"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/long_of_adv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_of_adv" />

    <EditText
        android:id="@+id/long_of_adv"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/textview_background"
        android:hint="@string/long_description"
        android:gravity="top"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="16sp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/location_of_adv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/short_of_adv"/>


    <EditText
        android:id="@+id/location_of_adv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/textview_background"
        android:hint="@string/location"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="16sp"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/picked_image_pager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/long_of_adv" />


    <android.support.v4.view.ViewPager
        android:id="@+id/picked_image_pager"
        android:layout_width="232dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ic_photo_size_select_actual_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/swipe_left"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_keyboard_arrow_left_black_24dp"
        android:backgroundTint="#135fd8"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/picked_image_pager"
        app:layout_constraintEnd_toEndOf="@+id/picked_image_pager"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/picked_image_pager"
        app:layout_constraintTop_toTopOf="@+id/picked_image_pager" />

    <ImageView
        android:id="@+id/swipe_right"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_keyboard_arrow_right_black_24dp"
        android:backgroundTint="#135fd8"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/picked_image_pager"
        app:layout_constraintEnd_toEndOf="@+id/picked_image_pager"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/picked_image_pager"
        app:layout_constraintTop_toTopOf="@+id/picked_image_pager" />
    <ImageView
        android:id="@+id/add_image_logo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="@string/details_content_desc"
        android:focusable="true"
        android:src="@drawable/ic_add_black_24dp"
        app:layout_constraintBottom_toTopOf="@+id/upload_advert"
        app:layout_constraintEnd_toStartOf="@+id/picked_image_pager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_of_adv" />

    <Button
        android:id="@+id/upload_advert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/picked_image_pager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_image_logo" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        android:indeterminateDrawable="@drawable/my_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>