<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/recyclerview_item_borders">

    <ImageView
        android:id="@+id/ad_picture"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/details_content_desc" />

    <ImageView
        android:id="@+id/uploader_picture"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:scaleType="fitXY"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ad_picture" />

    <TextView
        android:id="@+id/ad_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/ad_description"
        app:layout_constraintStart_toEndOf="@+id/uploader_picture"
        app:layout_constraintTop_toBottomOf="@+id/ad_picture"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/ad_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/uploader_picture"
        app:layout_constraintTop_toBottomOf="@+id/ad_title" />


    <ImageView
        android:id="@+id/ad_seen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/view_logo"
        android:src="@drawable/ic_touch_app_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/num_of_seen"
        app:layout_constraintTop_toBottomOf="@+id/ad_picture"
        app:layout_constraintVertical_bias="0.75" />


    <TextView
        android:id="@+id/num_of_seen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ad_picture"
        app:layout_constraintVertical_bias="0.75" />

    <android.support.constraint.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        app:constraint_referenced_ids="num_of_seen,ad_seen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>